# maya

./: .gitignore  API_SETUP.md  ARCHITECTURE.md  FACE_AUTH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  UI_REDESIGN.md  VOICE_USAGE.md  pyproject.toml  remove_bg.py  requirements.txt  run_maya.sh
frontend/: README.md  main.py  requirements.txt
frontend/components/: __init__.py  camera_feed.py  center_panel.py  custom_widgets.py  face_auth_screen.py  face_enrollment.py  face_recognizer.py  left_panel.py  navbar.py  right_panel.py  secure_storage.py  top_navbar.py  voice_listener.py  voice_listener_api.py  waveform.py
maya/: main.py
scripts/: setup_pin.py  test_installation.sh
tauri-app/: README.md  package-lock.json  package.json  setup.sh
tauri-app/src/: app.js  index.html  styles.css
tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
