[package]
name = "maya"
version = "2.0.0"
description = "MAYA AI Assistant - Tauri Desktop App"
authors = ["Afraz Rupak"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
